--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.port=8080
 server.address=0.0.0.0
 
 
-
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
 
 spring.servlet.multipart.enabled=true
